--- a/fishfood/app/templates/base.html
+++ b/fishfood/app/templates/base.html
@@ -1,7 +1,7 @@
 <html>
   <head>
 
-    <title>{{ title }} - Fishfood</title>
+    <title>{{ title }} - Fish</title>
     <link href='https://fonts.googleapis.com/css?family=Muli:400,300' rel='stylesheet' type='text/css' />
     <meta charset="utf-8">
     <link rel="stylesheet" href="static/index.css">
@@ -10,12 +10,14 @@
     <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
     <script src="static/fish.js"></script>
     <script src="static/index.js"</script>
+    <script src="//d3js.org/d3.v3.min.js"></script>
     <link rel="stylesheet" href="/resources/demos/style.css">
     <link href='https://fonts.googleapis.com/css?family=Muli:400,300' rel='stylesheet' type='text/css' />
-    <script src="//d3js.org/d3.v3.min.js"></script>
+    
+
   </head>
   <body>
-    <div>Fishfood: <a href="/index">Home</a></div>
+    <div>Fish: <a href="/index">fish</a></div>
     <hr>
     {% block content %}{% endblock %}
   </body>
