--- a/fishfood/app/templates/index.html
+++ b/fishfood/app/templates/index.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
-  <h1>Hi</h1>
+  <h1>Hello fish</h1>
+  <p>fish fish fishing fisheries fish fish</p>
   <div class="ui-widget">
     <label for="tags">enter: a fish </label>
     <input id="tags">
