--- a/fishfood/app/templates/base.html
+++ b/fishfood/app/templates/base.html
@@ -8,9 +8,12 @@
     <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
     <script src="//code.jquery.com/jquery-1.10.2.js"></script>
     <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+    
+<!--     <script src="static/index.js"</script>
+ -->    <script src="https://d3js.org/d3.v3.min.js"></script>
+
     <script src="static/fish.js"></script>
-    <script src="static/index.js"</script>
-    <script src="//d3js.org/d3.v3.min.js"></script>
+
     <link rel="stylesheet" href="/resources/demos/style.css">
     <link href='https://fonts.googleapis.com/css?family=Muli:400,300' rel='stylesheet' type='text/css' />
     
@@ -19,6 +22,6 @@
   <body>
     <div>Fish: <a href="/index">fish</a></div>
     <hr>
-    {% block content %}{% endblock %}
+    {% block content %}{% endblock %} 
   </body>
 </html>
