--- a/fishfood/app/templates/base.html
+++ b/fishfood/app/templates/base.html
@@ -20,8 +20,10 @@
 
   </head>
   <body>
-    <div>Fish: <a href="/index">fish</a></div>
-    <hr>
+  <div>
+    <a href="/index">FishFinder</a>
+    <a href="/index">FishWatch</a>
+  </div>
     {% block content %}{% endblock %} 
   </body>
 </html>
