--- a/fishfood/app/templates/index.html
+++ b/fishfood/app/templates/index.html
@@ -1,14 +1,15 @@
 {% extends "base.html" %}
 {% block content %}
-  <h1>Hello fish</h1>
-  <p>fish fish fishing fisheries fish fish</p>
+<div class="center">
+  <h1>FISH FINDER</h1>
+  <p>Look up a fish to sea if it is overfished</p>
   <div class="ui-widget">
-    <label for="tags">enter: a fish </label>
-    <input id="tags">
-  </div>
+   		<label for="tags">Enter A Fish: </label>
+   		<input id="tags">
+	</div>
+</div>
+<div class="svg-center" id="viz"></div>
 
-  <div id="viz">
-    
-  </div>
+
 
 {% endblock %}
